--- a/examples/restful-ws-quarkus/pom.xml
+++ b/examples/restful-ws-quarkus/pom.xml
@@ -11,10 +11,10 @@
     <artifactId>cloudevents-restful-ws-quarkus-example</artifactId>
     <properties>
         <module-name>cloudevents.example.restful.ws.quarkus</module-name>
-        <quarkus-plugin.version>1.10.3.Final</quarkus-plugin.version>
+        <quarkus-plugin.version>3.30.4</quarkus-plugin.version>
         <quarkus.platform.artifact-id>quarkus-universe-bom</quarkus.platform.artifact-id>
         <quarkus.platform.group-id>io.quarkus</quarkus.platform.group-id>
-        <quarkus.platform.version>1.10.3.Final</quarkus.platform.version>
+        <quarkus.platform.version>3.30.4</quarkus.platform.version>
     </properties>
     <dependencyManagement>
         <dependencies>
