--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,7 @@
         <!-- Dependencies -->
         <assertj-core.version>3.27.6</assertj-core.version>
         <junit-jupiter.version>6.0.1</junit-jupiter.version>
+        <jackson.version>3.0.3</jackson.version>
     </properties>
 
     <distributionManagement>
@@ -168,7 +169,6 @@
                         <link>https://docs.spring.io/spring-framework/docs/current/javadoc-api/</link>
                         <link>https://jakarta.ee/specifications/platform/8/apidocs/</link>
                         <link>https://kafka.apache.org/30/javadoc/</link>
-                        <link>https://fasterxml.github.io/jackson-databind/javadoc/2.10/</link>
                     </links>
                     <source>25</source>
                 </configuration>
